# Babes-SDA

./: README.md
linked_List_ordered_dict/: CMakeLists.txt  DO.cpp  DO.h  Iterator.cpp  Iterator.h  TestScurt.cpp  cerinta_lab3  pseudo_cod.txt
lista_indexata_lab4/: CMakeLists.txt  IteratorLI.cpp  IteratorLI.h  LI.cpp  LI.h  TestExtins.cpp  TestScurt.cpp  TestScurt.h  main.cpp
ordered_dict/: App.cpp  CMakeLists.txt  DO.cpp  DO.h  Iterator.cpp  Iterator.h  TestScurt.cpp
