cmake_minimum_required(VERSION 3.27)
project(Structuri_Date_Algoritmi)

set(CMAKE_CXX_STANDARD 17)

add_executable(Structuri_Date_Algoritmi App.cpp
        DO.cpp
        DO.h
        Iterator.cpp
        Iterator.h
        TestExtins.cpp
        TestExtins.h
        TestScurt.h
        TestScurt.cpp
)
